[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-langfuse-hook"
version = "0.2.0"
description = "Ship Claude Code transcripts to Langfuse with a durable outbox and streaming-update merge"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # 4.x line. emit_turn uses the OTel-style start_as_current_observation
    # plus propagate_attributes, which is the public 4.x API. Users on
    # langfuse 3.x can pin claude-code-langfuse-hook==0.1.x.
    "langfuse>=4.0,<5",
]

[tool.setuptools]
py-modules = ["hook", "backfill", "recompute_costs"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "requests>=2",
]

[project.urls]
Homepage = "https://github.com/tyvem/claude-code-langfuse-hook"
Issues = "https://github.com/tyvem/claude-code-langfuse-hook/issues"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # default arg with function call (Pydantic-style is fine here)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
